testsuite/tests/properties/invalid_bind/test.out
== bad_arity.lkt ==
common.lkt:18:9: error: Missing an actual for argument #1 (b)
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_return_type.lkt ==
common.lkt:18:9: error: Converter property must return a subtype of FooNode.entity
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== unbound_dynvar.lkt ==
common.lkt:18:9: error: Some dynamic variables need to be bound: dyn_node2
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== valid.lkt ==
Code generation was successful

== valid_default_arg.lkt ==
Code generation was successful

lkt_compile: Done
